--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VUE_APP_PROJECT = "https://github.com/cmliu/sub-web-modify"
 
-VUE_APP_BOT_LINK = "https://t.me/bmchattingbot"
+VUE_APP_BOT_LINK = "https://t.me/bmchatting_bot"
 
 VUE_APP_BILIBILI_LINK = "https://space.bilibili.com/138129883"
 
